istio/dev/destinationrule-cart-metrics.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: cart-metrics-no-mtls
  namespace: dev
spec:
  host: cart.dev.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 8090
        tls:
          mode: PERMISSIVE
