istio/dev/destinationrule-customer-metrics.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: customer-metrics-no-mtls
  namespace: dev
spec:
  host: customer.dev.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 8090
        tls:
          mode: DISABLE
