istio/dev/destinationrule-payment-metrics.yaml
apiVersion: networking.istio.io/v1beta1
kind: DestinationRule
metadata:
  name: payment-metrics-no-mtls
  namespace: dev
spec:
  host: payment.dev.svc.cluster.local
  trafficPolicy:
    portLevelSettings:
      - port:
          number: 8090
        tls:
          mode: DISABLE
